# okay-loc

./: .gitignore  Cargo.toml  LICENSE  README.md  out.txt
src/: exclusion.rs  loc_result.rs  main.rs
