[package]
name = "okay-loc"
version = "0.1.0"
authors = ["Barnabás Rátki <barna@wexo.systems>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description="Binary for counting lines of code in project, it is okay and git 'aware'."
homepage="https://github.com/Dewyer/okay-loc"
repository="https://github.com/Dewyer/okay-loc"
readme="README.md"
keywords=["lines of code","loc"]

[dependencies]
clap = "2.33.1"
regex = "1.3.7"
anyhow = "1.0.31"
gitignore = "1.0.6"